Tests/Positive/VariablePointerIndirection.mr
fun main(): i32 {
    var x: i32 = 5;
    var p: *i32 = &x; 
    *p = 10;
    return 0;
}
